fixed issue with list-name overflow

--- a/src/component-styles/sticky.css
+++ b/src/component-styles/sticky.css
@@ -23,7 +23,7 @@
     margin: 3rem 0rem .67rem 3rem;
     /* note, margin-right is 3rem*/
 
-    width:100%;
+    width:84%;
     display:inline-block;
     text-overflow:ellipsis;
     white-space:nowrap;
